--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "sass": "^1.94.0"
   }
 }
